fix: layout issue

--- a/src/components/ui/nav/index.css
+++ b/src/components/ui/nav/index.css
@@ -2,7 +2,7 @@
 
 @layer components {
     .nav {
-        @apply w-full border-y border-(--semigrid) sticky top-0 z-10;
+        @apply w-full border-y border-(--semigrid) sticky top-0 z-12;
         &:before {
             content: '';
             @apply absolute top-0 left-0 right-0 bottom-0 bg-(--bg-default)/70 backdrop-blur-2xl;
